tests/ui/rfcs/rfc-2632-const-trait-impl/without-tilde.stderr
error: expected identifier, found `]`
  --> $DIR/without-tilde.rs:5:3
   |
LL | #[]
   |   ^ expected identifier

error: aborting due to previous error

